--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -32,22 +32,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sumas totales: [6, 6, 6, 7, 10, 6, 12, 8, 8, 7, 7, 2, 4, 6, 8, 7, 5, 8, 4, 4, 4, 7, 10, 6, 6, 2, 5, 7, 8]\n"
+      "probability: 0.672\n",
+      "Sumas totales: 672\n"
      ]
     }
    ],
    "source": [
     "# TODO\n",
+    "# Se importa la librería random\n",
     "import random\n",
     "\n",
-    "\n",
-    "all_sum = []\n",
-    "for time in range(1, 30):\n",
+    "# Se realiza el lanzamiento de los dados\n",
+    "counter = 0\n",
+    "for _ in range(1, 1001):\n",
     "    dice1 = random.randint(1, 6)\n",
     "    dice2 = random.randint(1, 6)\n",
     "    sum = dice1 + dice2\n",
-    "    all_sum.append(sum)\n",
-    "print(f'Sumas totales: {all_sum}')"
+    "    if sum > 7 or sum % 2 == 0:\n",
+    "        counter = counter + 1\n",
+    "        #print(sum)\n",
+    "\n",
+    "propability = counter/1000\n",
+    "print(f'probability: {propability}')\n",
+    "print(f'Sumas totales: {counter}')"
    ]
   },
   {
