added conclusion to exercise 1

--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -32,8 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "probability: 0.672\n",
-      "Sumas totales: 672\n"
+      "Probabilidad: 0.696\n"
      ]
     }
    ],
@@ -53,8 +52,16 @@
     "        #print(sum)\n",
     "\n",
     "propability = counter/1000\n",
-    "print(f'probability: {propability}')\n",
-    "print(f'Sumas totales: {counter}')"
+    "\n",
+    "print(f'Probabilidad: {propability}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2be962b6",
+   "metadata": {},
+   "source": [
+    "Conclusión: Al lanzar los dos lados, con muy poca variación, la probabilidad se mantiene alrededor de:  `0.6`"
    ]
   },
   {
@@ -74,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "23244d20",
    "metadata": {},
    "outputs": [
@@ -100,7 +107,8 @@
     "\n",
     "print(ball_box)\n",
     "            \n",
-    "# TODO"
+    "# TODO\n",
+    "\n"
    ]
   }
  ],
