--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -61,7 +61,7 @@
    "id": "2be962b6",
    "metadata": {},
    "source": [
-    "Conclusión: Al lanzar los dos lados, con muy poca variación, la probabilidad se mantiene alrededor de:  `0.6`"
+    "Conclusión:  Al lanzar los dos lados, con muy poca variación, la probabilidad se mantiene alrededor de:  `0.6`"
    ]
   },
   {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 55,
    "id": "23244d20",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: 'White', 1: 'White', 2: 'White', 3: 'White', 4: 'White', 5: 'White', 6: 'White', 7: 'White', 8: 'White', 9: 'White', 10: 'Red', 11: 'Red', 12: 'Red', 13: 'Red', 14: 'Red', 15: 'Red', 16: 'Red', 17: 'Red', 18: 'Red', 19: 'Red', 20: 'Red', 21: 'Red', 22: 'Red', 23: 'Red', 24: 'Red', 25: 'Red', 26: 'Red', 27: 'Red', 28: 'Red', 29: 'Red', 30: 'Green', 31: 'Green', 32: 'Green', 33: 'Green', 34: 'Green', 35: 'Green', 36: 'Green', 37: 'Green', 38: 'Green', 39: 'Green', 40: 'Green', 41: 'Green', 42: 'Green', 43: 'Green', 44: 'Green', 45: 'Green', 46: 'Green', 47: 'Green', 48: 'Green', 49: 'Green', 50: 'Green', 51: 'Green', 52: 'Green', 53: 'Green', 54: 'Green', 55: 'Green', 56: 'Green', 57: 'Green', 58: 'Green', 59: 'Green'}\n"
+      "Resultado 1\n",
+      "Resultado 1\n",
+      "Resultado 1\n",
+      "Resultado 1\n"
      ]
     }
    ],
@@ -105,9 +108,16 @@
     "    else:\n",
     "        ball_box[i] = \"Green\"\n",
     "\n",
-    "print(ball_box)\n",
+    "#print(ball_box)\n",
     "            \n",
     "# TODO\n",
+    "\n",
+    "for _ in range(1, 1001):\n",
+    "    choices = random.choices(ball_box, k = 5)\n",
+    "    #print(choices)\n",
+    "    if choices.count(\"White\") == 3 and choices.count(\"Red\") == 2:\n",
+    "        print(f'Resultado 1')\n",
+    "\n",
     "\n"
    ]
   }
