--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "23244d20",
    "metadata": {},
    "outputs": [
@@ -89,10 +89,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resultado 1\n",
-      "Resultado 1\n",
-      "Resultado 1\n",
-      "Resultado 1\n"
+      "Take 3 white and 2 red probability: 0.004\n",
+      "All are the same color: 0.0\n"
      ]
     }
    ],
@@ -112,13 +110,24 @@
     "            \n",
     "# TODO\n",
     "\n",
+    "counter_3w_and_2r = 0\n",
+    "counter_all_same_color = 0\n",
+    "\n",
     "for _ in range(1, 1001):\n",
     "    choices = random.choices(ball_box, k = 5)\n",
-    "    #print(choices)\n",
+    "    coincidence = len([x for x in choices[1:] if x == choices[0]])\n",
+    "    \n",
     "    if choices.count(\"White\") == 3 and choices.count(\"Red\") == 2:\n",
-    "        print(f'Resultado 1')\n",
+    "        counter_3w_and_2r = counter_3w_and_2r + 1\n",
+    "        \n",
+    "    if coincidence == 5:\n",
+    "        counter_all_same_color = counter_all_same_color + 1\n",
     "\n",
-    "\n"
+    "probability_3w_and_2r = counter_3w_and_2r / 1000\n",
+    "probability_all_same_color = counter_all_same_color / 1000\n",
+    "\n",
+    "print(f'Take 3 white and 2 red probability: {probability_3w_and_2r}')\n",
+    "print(f'All are the same color: {probability_all_same_color}')"
    ]
   }
  ],
