--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "23244d20",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Take 3 white and 2 red probability: 0.004\n",
+      "Take 3 white and 2 red probability: 0.005\n",
       "All are the same color: 0.0\n"
      ]
     }
@@ -128,6 +128,15 @@
     "\n",
     "print(f'Take 3 white and 2 red probability: {probability_3w_and_2r}')\n",
     "print(f'All are the same color: {probability_all_same_color}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e2ca403",
+   "metadata": {},
+   "source": [
+    "Conclusión: Para este segundo ejercicio, podemos ver que para el primer caso, siempre hay una probabilidad, aunque pequeña, de que se obtengan 3 pelotas blancas y 2 pelotas rojas. \n",
+    "Por otro lado, se complica más que se puedan obtener todas las pelotas del mismo color, aunque se jugó con el número de intentos, con números grandes, es muy difícil que las 5 pelotas sean del mismo color."
    ]
   }
  ],
