--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 146,
    "id": "23244d20",
    "metadata": {},
    "outputs": [
@@ -89,8 +89,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Take 3 white and 2 red probability: 0.005\n",
-      "All are the same color: 0.0\n"
+      "Take 3 white and 2 red probability: 0.007\n",
+      "All are the same color: 0.044\n"
      ]
     }
    ],
@@ -113,15 +113,14 @@
     "counter_3w_and_2r = 0\n",
     "counter_all_same_color = 0\n",
     "\n",
-    "for _ in range(1, 1001):\n",
+    "for _ in range(1000):\n",
     "    choices = random.choices(ball_box, k = 5)\n",
-    "    coincidence = len([x for x in choices[1:] if x == choices[0]])\n",
     "    \n",
     "    if choices.count(\"White\") == 3 and choices.count(\"Red\") == 2:\n",
-    "        counter_3w_and_2r = counter_3w_and_2r + 1\n",
+    "        counter_3w_and_2r += 1\n",
     "        \n",
-    "    if coincidence == 5:\n",
-    "        counter_all_same_color = counter_all_same_color + 1\n",
+    "    if choices.count(\"White\") == 5 or choices.count(\"Red\") == 5 or choices.count(\"Green\") == 5:\n",
+    "        counter_all_same_color += 1\n",
     "\n",
     "probability_3w_and_2r = counter_3w_and_2r / 1000\n",
     "probability_all_same_color = counter_all_same_color / 1000\n",
@@ -136,7 +135,7 @@
    "metadata": {},
    "source": [
     "Conclusión: Para este segundo ejercicio, podemos ver que para el primer caso, siempre hay una probabilidad, aunque pequeña, de que se obtengan 3 pelotas blancas y 2 pelotas rojas. \n",
-    "Por otro lado, se complica más que se puedan obtener todas las pelotas del mismo color, aunque se jugó con el número de intentos, con números grandes, es muy difícil que las 5 pelotas sean del mismo color."
+    "Por otro lado, al hacer varios experimentos, es más probable o recurrente que se obtengan pelotas del mismo color."
    ]
   }
  ],
