added  comments to exercises

--- a/notebook/problems.ipynb
+++ b/notebook/problems.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -41,18 +41,21 @@
     "# Se importa la librería random\n",
     "import random\n",
     "\n",
-    "# Se realiza el lanzamiento de los dados\n",
+    "# Se realizan los experimentos\n",
     "counter = 0\n",
     "for _ in range(1, 1001):\n",
     "    dice1 = random.randint(1, 6)\n",
     "    dice2 = random.randint(1, 6)\n",
     "    sum = dice1 + dice2\n",
+    "\n",
+    "    # Condición 1: Que el número sea mayor de 7 o un número par\n",
     "    if sum > 7 or sum % 2 == 0:\n",
     "        counter = counter + 1\n",
-    "        #print(sum)\n",
     "\n",
+    "# Se calcula la probabilidad del evento\n",
     "propability = counter/1000\n",
     "\n",
+    "# Resultados:\n",
     "print(f'Probabilidad: {propability}')"
    ]
   },
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "id": "23244d20",
    "metadata": {},
    "outputs": [
@@ -109,22 +112,27 @@
     "#print(ball_box)\n",
     "            \n",
     "# TODO\n",
-    "\n",
+    "# Se añaden los contadores de los eventos\n",
     "counter_3w_and_2r = 0\n",
     "counter_all_same_color = 0\n",
     "\n",
+    "# Se define el número de experimentos y las condicionales para realizar el conteo:\n",
     "for _ in range(1000):\n",
     "    choices = random.choices(ball_box, k = 5)\n",
-    "    \n",
+    "\n",
+    "    # Condicional 1: 3 pelotas blancas y 2 pelotas rojas\n",
     "    if choices.count(\"White\") == 3 and choices.count(\"Red\") == 2:\n",
     "        counter_3w_and_2r += 1\n",
-    "        \n",
+    "    \n",
+    "    # Condicional 2: Todas las pelotas del mismo color\n",
     "    if choices.count(\"White\") == 5 or choices.count(\"Red\") == 5 or choices.count(\"Green\") == 5:\n",
     "        counter_all_same_color += 1\n",
     "\n",
+    "# Se obtienen las probabilidades\n",
     "probability_3w_and_2r = counter_3w_and_2r / 1000\n",
     "probability_all_same_color = counter_all_same_color / 1000\n",
     "\n",
+    "# Resultados:\n",
     "print(f'Take 3 white and 2 red probability: {probability_3w_and_2r}')\n",
     "print(f'All are the same color: {probability_all_same_color}')"
    ]
